Desafío Clase 6_Incorporar Arrays

--- a/index.html
+++ b/index.html
@@ -102,16 +102,23 @@
       <div class="mainProductos__div_categoria">
 
         <!-- Categoría 1 -->
-        <a style="cursor:pointer" onclick='unidadesAbrazadera()' class="mainProductos__div_categoria-1">
+        <a style="cursor:pointer" onclick='fProducto1()' class="mainProductos__div_categoria-1">
           <div class="mainProductos__div_categoria--desaparecer">
             <p class="mainProductos__p">ABRAZADERAS</p>
           </div>    
         </a>
 
         <!-- Categoría 2 -->
-        <a style="cursor:pointer" onclick='unidadesAgua()' class="mainProductos__div_categoria-2">
+        <a style="cursor:pointer" onclick='fProducto2()' class="mainProductos__div_categoria-2">
           <div class="mainProductos__div_categoria--desaparecer">
             <p class="mainProductos__p">ACCESORIOS EN BRONCE FUNDIDO ROSCADO</p>
+          </div>        
+        </a>
+
+        <!-- Categoría 3 -->
+        <a style="cursor:pointer" onclick='fProducto3()' class="mainProductos__div_categoria-3">
+          <div class="mainProductos__div_categoria--desaparecer">
+            <p class="mainProductos__p">ACCESORIOS EN BRONCE PARA GAS</p>
           </div>        
         </a>
 
