Entrega Proyecto Final

--- a/index.html
+++ b/index.html
@@ -190,9 +190,11 @@
         <p class="mainProductos__carrito" id="cantidadesCarrito">0</p>
       </div>
 
+      <h2 class="mainProductos__titulo2" id="productosCompradosTitulo">PRODUCTOS COMPRADOS</h2>
 
       <div id="productos" class="mainProductos__div_categoria"></div>
       <div id="productoDetalle" class="mainProductos__div_detalle1"></div>
+      <div id="productoComprado" class="mainProductos__div_detalle1"></div>
 
      
 
